# obiwan

./: Cargo.toml  README.md
rsc/static/css/: style.css
rsc/static/js/: app.js
rsc/template/: index.html
src/: main.rs  obiwan.rs
