[package]
name = "obiwan"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["query", "typed-header"] }
axum-range = "0.5.0"
handlebars = "6.3.1"
include_dir = "0.7.4"
serde = "1.0.219"
serde_derive = "1.0.219"
tokio = { version = "1.44.0", features = ["full"] }
tower-serve-static = "0.1.1"
